# free-monads-by-example

./: .gitignore  LICENSE  README.md  default.nix  free-monads-by-example.cabal  free-monads-examples.cabal  hie.yaml  shell.nix  stack.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci.yml.disabled
app/: Main.hs
nix/: readDirectory.nix  sources.json
src/: ByteCode.hs  Interpreter.hs
test/: InterpreterSpec.hs
