cabal-version:      3.0
name:               free-monads-by-example
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Arnau Abella
maintainer:         arnau.abella@monadplus.pro
copyright:          2024 Arnau Abella
homepage:           https://github.com/monadplus/free-monads-by-example
bug-reports:        https://github.com/monadplus/free-monads-by-example/issues
synopsis:
description:
category:
extra-source-files: README.md
tested-with:        GHC ==9.6.3
                    GHC ==9.6.4

source-repository head
  type:     git
  location: https://github.com/monadplus/free-monads-by-example.git

common common-options
  default-language: Haskell2010
  build-depends:    base ^>=4.18
  ghc-options:
    -Werror -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -Wpartial-fields
    -fhide-source-paths -freverse-errors

  if impl(ghc >=8.8.1)
    ghc-options:
      -Wmissing-deriving-strategies -Werror=missing-deriving-strategies

executable free-monads-by-example
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  free-monads-by-example
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    ByteCode
    Interpreter

  build-depends:
    , async       ^>=2.2
    , bytestring  ^>=0.11
    , containers  ^>=0.6
    , free        >=5.1   && <5.3
    , mtl         ^>=2.3
    , text        ^>=2.0

test-suite free-monads-by-example-tests
  import:             common-options
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  other-modules:      InterpreterSpec
  build-depends:
    , free-monads-by-example
    , hspec                   >=2.10  && <2.12
    , hspec-core              >=2.10  && <2.12
    , QuickCheck              ^>=2.14
