cabal-version:       3.0

name:                free-monads-examples
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
author:              Arnau Abella
maintainer:          arnau.abella@monadplus.pro
copyright:           2022 Arnau Abella
homepage:            https://github.com/monadplus/free-monads-examples
bug-reports:         https://github.com/monadplus/free-monads-examples/issues
synopsis:
description:
category:
extra-source-files:  README.md
tested-with:         GHC == 8.10.7
                     GHC == 9.2.4

source-repository head
  type:                git
  location:            https://github.com/monadplus/free-monads-examples.git

Common common-options
  default-language:    Haskell2010
  build-depends:       base ^>=4.16,
  ghc-options:         -Werror
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wpartial-fields
                       -fhide-source-paths
                       -freverse-errors
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

Executable free-monads-examples
  import:                common-options
  main-is:               Main.hs
  hs-source-dirs:        app

  build-depends:         free-monads-examples,

  ghc-options:           -O2
                         -threaded
                         -rtsopts
                         -with-rtsopts=-N

Library
  import:             common-options
  hs-source-dirs:     src

  exposed-modules:    ByteCode,
                      Interpreter

  build-depends:      async          ^>=2.2,
                      bytestring     ^>=0.11,
                      containers     ^>=0.6,
                      free           ^>=5.1,
                      mtl            ^>=2.2,
                      text           ^>=1.2,

Test-suite free-monads-examples-tests
  import:               common-options
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  build-tool-depends:   hspec-discover:hspec-discover == 2.*
  other-modules:        InterpreterSpec,

  build-depends:        free-monads-examples,
                        hspec             ^>=2.7,
                        hspec-core        ^>=2.7,
                        QuickCheck        ^>=2.14,
